atualizar swaggers
