# events/app/Http/Controllers/EventController.php
@@ -41,11 +41,12 @@ class EventController extends Controller
      *      summary="Create a new event",
      *      description="Returns event",
      *      @OA\RequestBody(
-     *          required=true,
-     *          @OA\Property(property="name", type="string", description="Name of the event", readOnly="false"),
-     *          @OA\Property(property="description", type="string", description="Description of the event", readOnly="false"),
-     *          @OA\Property(property="highlight", type="boolean", description="Is highlight event", readOnly="false"),
-     *          @OA\Property(property="age_group", type="string", description="Age group of event", readOnly="false"),
+     *          @OA\JsonContent(
+     *              @OA\Property(property="name", type="string", description="Name of the event", example="Nome do evento"),
+     *              @OA\Property(property="description", type="string", description="Description of the event", example="Descriçãp da festa"),
+     *              @OA\Property(property="highlight", type="boolean", description="Is highlight event", example="true"),
+     *              @OA\Property(property="age_group", type="string", description="Age group of event", example="Jovens")
+     *         )
      *      ),
      *      @OA\Response(
      *          response=200,
@@ -114,11 +115,12 @@ class EventController extends Controller
      *          )
      *      ),
      *      @OA\RequestBody(
-     *          required=true,
-     *          @OA\Property(property="name", type="string", description="Name of the event", readOnly="false"),
-     *          @OA\Property(property="description", type="string", description="Description of the event", readOnly="false"),
-     *          @OA\Property(property="highlight", type="boolean", description="Is highlight event", readOnly="false"),
-     *          @OA\Property(property="age_group", type="string", description="Age group of event", readOnly="false"),
+     *          @OA\JsonContent(
+     *              @OA\Property(property="name", type="string", description="Name of the event", example="Nome do evento"),
+     *              @OA\Property(property="description", type="string", description="Description of the event", example="Descriçãp da festa"),
+     *              @OA\Property(property="highlight", type="boolean", description="Is highlight event", example="true"),
+     *              @OA\Property(property="age_group", type="string", description="Age group of event", example="Jovens")
+     *         )
      *      ),
      *      @OA\Response(
      *          response=200,
@@ -136,9 +138,43 @@ class EventController extends Controller
         return response()->json($event);
     }
 
-    public function search(SearchEventRequest $request): JsonResponse
+    
+        /**
+     * @OA\Delete(
+     *      path="/events/{id}",
+     *      operationId="update",
+     *      tags={"Events"},
+     *      summary="Update event",
+     *      description="Returns event",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Event id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=204,
+     *          description="successful operation"
+     *       )
+     * )
+     *
+     * @param UpdateEventRequest $request
+     * @param $id
+     * @return JsonResponse
+     */
+    public function delete(Request $request, $id)
+    {
+        $this->eventRepository->delete($id);
+        return response()->noContent();
+    }
+
+    public function search(Request $request): JsonResponse
     {
         $events = $this->eventRepository->search($request->query());
         return response()->json($events);
     }
+
 }
